{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 309,
  "lineage": "5e4d5094-d1bc-72b8-f540-33155f9d8ddd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mern_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:658018931339:loadbalancer/app/mern-app-alb/7f5dee5506bf2c15",
            "arn_suffix": "app/mern-app-alb/7f5dee5506bf2c15",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mern-app-alb-793761547.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:658018931339:loadbalancer/app/mern-app-alb/7f5dee5506bf2c15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mern-app-alb",
            "preserve_host_header": false,
            "security_groups": ["sg-0452f0a24ec16926e"],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023317d38e86f14b6"
              },
              {
                "subnet_id": "subnet-028b6a48887812023"
              },
              {
                "subnet_id": "subnet-02aa01034e8a693ca"
              },
              {
                "subnet_id": "subnet-030f32eb8c0609559"
              },
              {
                "subnet_id": "subnet-0a1bf785ad89eeaf3"
              },
              {
                "subnet_id": "subnet-0bebf08b727bb7de3"
              }
            ],
            "subnets": [
              "subnet-023317d38e86f14b6",
              "subnet-028b6a48887812023",
              "subnet-02aa01034e8a693ca",
              "subnet-030f32eb8c0609559",
              "subnet-0a1bf785ad89eeaf3",
              "subnet-0bebf08b727bb7de3"
            ],
            "vpc_id": "vpc-0c7a0cde49cbccfe6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": ["aws_security_group.mern_sg"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mern_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:658018931339:listener/app/mern-app-alb/7f5dee5506bf2c15/d14ea9c504eadc80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:658018931339:targetgroup/mern-app-tg/c256286f7f98012a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:658018931339:listener/app/mern-app-alb/7f5dee5506bf2c15/d14ea9c504eadc80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:658018931339:loadbalancer/app/mern-app-alb/7f5dee5506bf2c15",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": ["aws_lb.mern_alb", "aws_lb_target_group.mern_tg", "aws_security_group.mern_sg"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mern_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:658018931339:targetgroup/mern-app-tg/c256286f7f98012a",
            "arn_suffix": "targetgroup/mern-app-tg/c256286f7f98012a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:658018931339:targetgroup/mern-app-tg/c256286f7f98012a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:658018931339:loadbalancer/app/mern-app-alb/7f5dee5506bf2c15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mern-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7a0cde49cbccfe6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mern_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658018931339:security-group/sg-0452f0a24ec16926e",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0452f0a24ec16926e",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mern-app-sg",
            "name_prefix": "",
            "owner_id": "658018931339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mern-app-sg"
            },
            "tags_all": {
              "Name": "mern-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7a0cde49cbccfe6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}